--- a/DentalCare/PacientesCitas/Interfaz.ui
+++ b/DentalCare/PacientesCitas/Interfaz.ui
@@ -23,7 +23,7 @@
                             </string>
                         </property>
                         <property name="text">
-                            <string>Semana Actual</string>
+                            <string>Gestor de Citas</string>
                         </property>
                         <property name="alignment">
                             <set>Qt::AlignCenter</set>
